--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "csv-parser": "^2.3.2",
     "gatsby": "^2.20.27",
     "gatsby-plugin-typescript": "^2.3.3",
+    "mongodb": "^3.5.6",
     "now": "^18.0.0",
     "react": "^16.13.1",
     "react-chartjs-2": "^2.9.0",
